<resources>
    <string name="app_name">DemoVideos</string>


    <!--message error generic-->
    <string name="network_error">Verificar su conexión a internet</string>
    <string name="error_timeout">Se cortó la conexión</string>
    <string name="error_generic">Ocurrio un error inesperado</string>
    <string name="denied_permission_camera">Necesitas este permiso para acceder a la camara</string>
    <string name="denied_permission_location">Necesitas este permiso para acceder a ubicar los establecimiento cerca</string>
    <string name="error_go">Ocurrió un error de conexión, inténtelo más tarde</string>
    <string name="exception_no_internet_error">Error de conexión de internet \nPor favor verifica tu conexión.</string>
    <string name="exception_no_internet_error_disponible">Este servicio no se encuentra\n disponible en este horario o , \nSe cortó la conexión</string>



    <string name="error_empty_user">Debes ingresar tu nombre de usuario</string>
    <string name="error_empty_password">Debes ingresar tu contraseña</string>
    <string name="error_login">Las credenciales son incorrectas</string>

    <!--text button-->
    <string name="dialog_accept">Aceptar</string>
    <string name="btn_enter">Ingresar</string>
    <string name="txt_cancel_btn">Cancelar</string>


    <string name="txt_logout_des">¿Estás seguro que deseas cerrar sesión?</string>



    <string name="test_title_home">PELICULAS</string>
    <string name="test_title">DEMO MOVIE</string>
    <string name="test_sub_title">DISFRUTA TUS VIDEOS</string>
    <string name="text_welcome">BIENVENIDO</string>


    <string name="text_hint_user">Usuario</string>
    <string name="text_hint_pass">Contraseña</string>
    <string name="txt_title_note">Nota Pelicula</string>
    <string name="txt_title_date">Fecha lanzamiento :</string>
    <string name="txt_title_description">Resumen de pelicula :</string>
</resources>