<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/contentLogout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/size_thirty_two"
        android:layout_marginEnd="@dimen/size_thirty_two"
        android:background="@drawable/bg_white_round"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView21"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/app_name"
            android:textSize="@dimen/text_size_nineteen"
            android:textColor="@color/purple_500"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ctr_close" />

        <TextView
            android:id="@+id/txtMessage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/size_twenty_four"
            android:layout_marginTop="@dimen/size_sixteen"
            android:layout_marginEnd="@dimen/size_twenty_four"
            android:textStyle="italic"
            android:gravity="center_horizontal"
            android:text="@string/txt_logout_des"
            android:textAppearance="@android:style/TextAppearance.Material.Subhead"
            android:textColor="@color/purple_500"
            android:textSize="@dimen/text_size_fourteen"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView21" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/ctr_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_fifteen"
            android:layout_marginEnd="@dimen/size_fifteen"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imgCloseLogout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@null"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_close_purple" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/btnAcceptDialog"
            android:layout_width="@dimen/size_one_hundred_twenty"
            android:layout_height="@dimen/size_thirty"
            android:layout_marginTop="@dimen/size_twenty_four"
            android:layout_marginEnd="@dimen/size_sixteen"
            android:layout_marginBottom="@dimen/size_twenty"
            android:background="@drawable/bg_round_blue"
            android:elevation="@dimen/general"
            android:textStyle="bold"
            android:stateListAnimator="@null"
            android:text="@string/dialog_accept"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_twelve"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btnCancelDialog"
            app:layout_constraintTop_toBottomOf="@+id/txtMessage" />

        <Button
            android:id="@+id/btnCancelDialog"
            android:layout_width="@dimen/size_one_hundred_twenty"
            android:layout_height="@dimen/size_thirty"
            android:layout_marginStart="@dimen/size_sixteen"
            android:layout_marginTop="@dimen/size_twenty_four"
            android:layout_marginBottom="@dimen/size_twenty"
            android:background="@drawable/bg_stroke_blue"
            android:elevation="@dimen/general"
            android:textStyle="bold"
            android:stateListAnimator="@null"
            android:text="@string/txt_cancel_btn"
            android:textAllCaps="false"
            android:visibility="visible"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/text_size_twelve"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnAcceptDialog"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtMessage" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>