<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="signingViewModel"
            type="pe.meria.demovideos.ui.signing.SigningViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/profileImage"
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_one_hundred"
                android:contentDescription="@null"
                android:src="@drawable/logo_movie"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/linearLayout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/size_thirty_five"
                android:padding="@dimen/size_twenty"
                android:background="@color/gray_300"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profileImage">

                <pe.meria.demovideos.component.editNormal.TCEditNormalText
                    android:id="@+id/edNameUser"
                    android:layout_width="@dimen/general"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/size_fifteen"
                    app:hint="@string/text_hint_user"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    />


                <pe.meria.demovideos.component.editPasword.TCEditPasswordText
                    android:id="@+id/edPassUser"
                    android:layout_width="@dimen/general"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/size_fifteen"
                    app:hint="@string/text_hint_pass"
                    android:paddingStart="@dimen/size_five"
                    android:paddingEnd="@dimen/general"
                    app:layout_constraintTop_toBottomOf="@+id/edNameUser"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <Button
                    android:id="@+id/btnEnter"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/size_thirty_five"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/size_fifteen"
                    android:background="@drawable/bg_round_blue"
                    android:ems="13"
                    android:textStyle="bold"
                    android:onClick="@{()->signingViewModel.login()}"
                    android:text="@string/btn_enter"
                    app:layout_constraintTop_toBottomOf="@+id/edPassUser"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:textAllCaps="false"
                    android:textColor="@color/white" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>